--- a/style.css
+++ b/style.css
@@ -4285,12 +4285,6 @@ blockquote.alignright {
 	min-height: 64.9vh;
 }
 
-.custom-header,
-.custom-header-wrap {
-	position: relative;
-	z-index: -1;
-}
-
 .archive-header {
 	margin-top: 3.5rem;
 }
@@ -4299,11 +4293,10 @@ blockquote.alignright {
 	color: #fff;
 }
 
-.custom-header-media::before {
+.custom-header-media::after {
 	content: '';
 	height: 100vh;
 	width: 100%;
-	z-index: 1;
 	position: absolute;
 	top: 0;
 	background-image: linear-gradient(to bottom, #000, rgba(0, 0, 0, 0.4) 25vh, rgba(255, 255, 255, 0));
